fixed too much white on homepage, and fixed styles

--- a/styles/global.css
+++ b/styles/global.css
@@ -155,16 +155,15 @@ footer {
 }
 
 .filter-pink {
-    filter: invert(30%) sepia(53%) saturate(645%) hue-rotate(295deg) brightness(101%) contrast(99%);
+    filter: brightness(0) saturate(100%) invert(53%) sepia(59%) saturate(3785%) hue-rotate(295deg) brightness(96%) contrast(89%);
 }
 
 .filter-yellow {
-    filter: invert(88%) sepia(27%) saturate(2800%) hue-rotate(10deg) brightness(95%) contrast(103%);
+    filter: brightness(0) saturate(100%) invert(72%) sepia(30%) saturate(2743%) hue-rotate(15deg) brightness(113%) contrast(95%);
 }
 
 .subheading {
     color: rgba(255, 255, 255, 0.5);
-    padding-bottom: 10px;
 }
 
 .small-caps {
