--- a/styles/index.css
+++ b/styles/index.css
@@ -58,61 +58,50 @@
 }
 
 .reason-section {
+    padding: 1.5em;
     display: flex;
     justify-content: center;
-}
-
-.reason-container {
-    max-width: 1000px; /* Reduced width for less horizontal space */
-    width: 90%; 
+    max-width: 960px;
+    border-radius: 50px;
 }
 
 .reason-row {
     display: flex;
     align-items: center;
-    gap: 1rem;
-    background-color: rgba(255, 255, 255, 0);
-    border-radius: 9999px;
-    padding: 1.5rem;
-    margin-bottom: 1rem;
+    padding: 1.5em 0 1.5em 0;
     transition: background-color 0.3s ease;
+    border-bottom: solid 1px #e852ae65;
+    background-color: rgba(255, 255, 255, 0);
 }
 
-.reason-row:hover {
-    background-color: #ffffff05;
+.reason-row:hover h4 {
+    font-style: italic;
 }
 
-@media (max-width: 550px) { 
-    .reason-row:hover {
-        background-color: #ffffff00;
-    }
-}
 
 .icon-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    box-shadow: 0 0 12px 4px #e852ae;
-    flex-shrink: 0;
+    margin-right: 30px;
 }
 
 .icon-size {
-    width: 30px;
-    height: 30px;
+    width: 60px;
+    height: 60px;
+    opacity: 90%;
 }
 
 .reason-content h3 {
     margin: 0;
-    font-size: 1.25rem;
     color: #fff;
 }
 
+/* 
 .reason-content p {
     margin: 0.5rem 0 0;
-}
+} */
+
 .gallery-item {
     position: relative;
     width: 100%;
